# netbalancer

./: CMakeLists.txt  Config.xml  README.md
src/: configsgetter.cpp  configsgetter.h  main.cpp  networkbalancer.cpp  networkbalancer.h
